--- a/ProMgt.Client/_Imports.razor
+++ b/ProMgt.Client/_Imports.razor
@@ -26,6 +26,7 @@
 @using ProMgt.Client.Models.Fields.TaskStatus
 @using ProMgt.Client.Models.Section
 @using ProMgt.Client.Models.User
+@using ProMgt.Client.Models.Assignments
 @using ProMgt.Client.Components.Task.TaskStatistics
 @using ProMgt.Client.Components.Skeleton
 @using ProMgt.Client.Components
@@ -33,3 +34,5 @@
 @using ProMgt.Client.Components.Task
 @using ProMgt.Client.Components.Field
 @using ProMgt.Client.Components.Contact
+@using ProMgt.Client.Components.AssignedTask
+
