--- a/ProMgt.Client/Components/Field/PriorityDropDown.razor
+++ b/ProMgt.Client/Components/Field/PriorityDropDown.razor
@@ -150,6 +150,7 @@
 
             if (response.IsSuccessStatusCode)
             {
+                Snackbar.Configuration.PositionClass = Defaults.Classes.Position.BottomStart;
                 Snackbar.Add("Task priority updated successfully", MudBlazor.Severity.Success);
                 await GetTask();
                 await GetTaskPriorities();
@@ -159,16 +160,19 @@
             }
             else if (response.StatusCode == System.Net.HttpStatusCode.NotFound)
             {
+                Snackbar.Configuration.PositionClass = Defaults.Classes.Position.BottomStart;
                 Snackbar.Add("Task not found", MudBlazor.Severity.Error);
             }
             else
             {
+                Snackbar.Configuration.PositionClass = Defaults.Classes.Position.BottomStart;
                 Snackbar.Add("An error occurred while updating the Task priority", MudBlazor.Severity.Error);
             }
         }
         catch (Exception ex)
         {
             Console.WriteLine($"Error updating Task name: {ex.Message}");
+            Snackbar.Configuration.PositionClass = Defaults.Classes.Position.BottomStart;
             Snackbar.Add("An error occurred while updating the project name", MudBlazor.Severity.Error);
         }
     }
