--- a/ProMgt.Client/Pages/Project/AssignedProject.razor
+++ b/ProMgt.Client/Pages/Project/AssignedProject.razor
@@ -10,9 +10,9 @@
         <MudDivider DividerType="DividerType.Middle" Class="mx-0" />    
         <AssignedTaskOverview ProjectId="ProjectId"/>
     </MudTabPanel>
-    <MudTabPanel Text="List" Icon="@Icons.Material.Rounded.ListAlt">
+    <MudTabPanel Text="Task Details" Icon="@Icons.Material.Rounded.ListAlt">
         <MudDivider DividerType="DividerType.Middle" Class="mx-0" />   
-        <AssignedTaskList />
+        <AssignedTaskList ProjectId="ProjectId" />
     </MudTabPanel>   
 </MudTabs>
 
