--- a/ProMgt.Client/Pages/Project/ProjectDashboard.razor
+++ b/ProMgt.Client/Pages/Project/ProjectDashboard.razor
@@ -87,7 +87,7 @@ else
             <MudItem xs="12" md="6">
                 <MudPaper Outlined="true" Class="mud-width-full rounded-xl pa-8">
                     <MudItem Class="chart-title pb-1">
-                        Projects
+                        My Projects
                     </MudItem>
                     <MudGrid>
                         <MudItem xs="6">
